fix: selection drag is no longer visible above windows

--- a/style.css
+++ b/style.css
@@ -233,7 +233,7 @@ body {
   position: absolute;
   border: 1px dashed #fff;
   background: rgba(0, 0, 255, 0.1);
-  z-index: 1000;
+  z-index: 0;
   pointer-events: none;
   display: none;
 }
